# Poetry configuration

[tool.poetry]
name = "autoscout"
version = "0.1.0"
description = ""
authors = ["Dawid Szymaniak <dawid.szymania.dev@gmail.com>"]
readme = "README.md"
package-mode = false

# Dependencies

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.development.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"

# Build system

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
