# Poetry configuration

[tool.poetry]
name = "autoscout"
version = "0.1.0"
description = ""
authors = ["Dawid Szymaniak <dawid.szymaniak.dev@gmail.com>"]
readme = "README.md"
package-mode = false

# Dependencies

[tool.poetry.dependencies]
python = "^3.13"
poethepoet = "^0.33.1"
selenium = "^4.31.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.development.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"

# Ruff configuration

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D203",
    "D212",
    "D104",
    "D100",
    "ANN401",
    "PT012",
    "FBT001",
    "FBT002",
    "RUF012",
    "A005",
    "ARG001",
    "ARG002",
    "N812",
]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "FA",
    "ICN",
    "LOG",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "ARG",
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Mypy configuration

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# Poethepoet tasks

[tool.poe.tasks.format]
cmd = "ruff format autoscout"

[tool.poe.tasks._ruff_check]
cmd = "ruff check autoscout"

[tool.poe.tasks._mypy]
cmd = "mypy autoscout"

[tool.poe.tasks.lint]
sequence = ["_ruff_check", "_mypy"]

[tool.poe.tasks.run]
env = { "PYTHONPATH" = "." }
cmd = "python autoscout/main.py"

# Build system

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
